--- a/.github/workflows/monthly_global.yml
+++ b/.github/workflows/monthly_global.yml
@@ -35,7 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --all_tags
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Monthly/stats_metadata.json --all_tags --charts --summary --changeset
 
       - name: add stats to git
 
@@ -43,14 +43,19 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          cp *.csv stats/Global/Monthly/Monthly_global_stats.csv
-          cp *.png stats/Global/Monthly/charts/top_users.png
-          cp stats_metadata.json stats/Global/Monthly/stats_metadata.json
+          
+          base_dir=stats/Global/Monthly
+          mkdir -p $base_dir/charts/
 
-          git add -f stats/Global/Monthly/Monthly_global_stats.csv
-          git add -f stats/Global/Monthly/stats_metadata.json
-          git add -f stats/Global/Monthly/charts/top_users.png
+          cp *.csv $base_dir/stats.csv
+          cp *.png $base_dir/charts/
+          cp summary.md $base_dir/README.md
+          cp stats_metadata.json $base_dir/stats_metadata.json
 
+          git add -f $base_dir/stats.csv
+          git add -f $base_dir/stats_metadata.json
+          git add -f $base_dir/charts/
+          git add -f $base_dir/README.md
 
           git commit -m "Updated Monthly Global Stats"
           git push
@@ -63,11 +68,14 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
+          base_dir=stats/Global/Monthly
+          
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_month --tweet_global --git $commit_id
-          mv *.png stats/Global/Monthly/charts/
-          mv meta.md stats/Global/Monthly/README.md
-          git add -f stats/Global/Monthly/README.md
-          git add -f stats/Global/Monthly/charts/
+          
+          sudo mv summary.md $base_dir/README.md
+          
+          git add -f $base_dir/README.md
+
           git commit -m "Updated Readme Monthly Global"
           git push
