--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -35,7 +35,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Monthly/stats_metadata.json --all_tags
+          osmsg --url "http://download.geofabrik.de/asia/nepal-updates" --username '${{ secrets.OSM_USERNAME }}' --password '${{ secrets.OSM_PASSWORD }}' --format image csv --last_month --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Nepal/Monthly/stats_metadata.json --all_tags --summary --charts
 
       - name: add stats to git
 
@@ -43,14 +43,19 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          cp *.csv stats/Nepal/Monthly/Monthly_nepal_stats.csv
-          cp *.png stats/Nepal/Monthly/charts/top_users.png
-          cp stats_metadata.json stats/Nepal/Monthly/stats_metadata.json
+          
+          base_dir=stats/Nepal/Monthly
+          mkdir -p $base_dir/charts/
 
-          git add -f stats/Nepal/Monthly/Monthly_nepal_stats.csv
-          git add -f stats/Nepal/Monthly/stats_metadata.json
-          mv *.png stats/Nepal/Monthly/charts/top_users.png
+          cp *.csv $base_dir/stats.csv
+          cp *.png $base_dir/charts/
+          cp summary.md $base_dir/README.md
+          cp stats_metadata.json $base_dir/stats_metadata.json
 
+          git add -f $base_dir/stats.csv
+          git add -f $base_dir/stats_metadata.json
+          git add -f $base_dir/charts/
+          git add -f $base_dir/README.md
 
           git commit -m "Updated Monthly Nepal Stats"
           git push
@@ -63,11 +68,13 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
+          base_dir=stats/Nepal/Monthly
+
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_month --tweet_nepal --git $commit_id
-          mv meta.md stats/Nepal/Monthly/README.md
-          mv *.png stats/Nepal/Monthly/charts/
-          git add -f stats/Nepal/Monthly/README.md
-          git add -f stats/Nepal/Monthly/charts/
+          
+          sudo mv summary.md $base_dir/README.md
+          
+          git add -f $base_dir/README.md
           git commit -m "Updated Readme Monthly Nepal"
           git push
