--- a/.github/workflows/weekly_global.yml
+++ b/.github/workflows/weekly_global.yml
@@ -30,20 +30,26 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Weekly/stats_metadata.json --all_tags --changeset
+          osmsg --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_week --tags 'building' 'highway' 'waterway' 'amenity' --name stats --read_from_metadata stats/Global/Weekly/stats_metadata.json --all_tags --changeset --force --charts --summary
 
       - name: Upload stats to Github
         run: |
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          cp *.csv stats/Global/Weekly/weekly_global_stats.csv
-          cp *.png stats/Global/Weekly/charts/top_users.png
-          cp stats_metadata.json stats/Global/Weekly/stats_metadata.json
+          
+          base_dir=stats/Global/Weekly
+          mkdir -p $base_dir/charts/
 
-          git add -f stats/Global/Weekly/weekly_global_stats.csv
-          git add -f stats/Global/Weekly/stats_metadata.json
-          git add -f stats/Global/Weekly/charts/top_users.png
+          cp *.csv $base_dir/stats.csv
+          cp *.png $base_dir/charts/
+          cp summary.md $base_dir/README.md
+          cp stats_metadata.json $base_dir/stats_metadata.json
+
+          git add -f $base_dir/stats.csv
+          git add -f $base_dir/stats_metadata.json
+          git add -f $base_dir/charts/
+          git add -f $base_dir/README.md
 
           git commit -m "Updated Weekly Global Stats"
           git push
@@ -56,11 +62,14 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
+          base_dir=stats/Global/Weekly
+          
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_week --tweet_global --git $commit_id
-          mv meta.md stats/Global/Weekly/README.md
-          mv *.png stats/Global/Weekly/charts/
-          git add -f stats/Global/Weekly/README.md
-          git add -f stats/Global/Weekly/charts/
+          
+          sudo mv summary.md $base_dir/README.md
+          
+          git add -f $base_dir/README.md
+          
           git commit -m "Updated Readme Weekly Global"
           git push
