--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -30,7 +30,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts
 
       - name: add stats to git
 
@@ -38,15 +38,17 @@ jobs:
           git pull
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
-          cp *.csv stats/Global/Daily/daily_global_stats.csv
-          cp *.png stats/Global/Daily/charts/top_users.png
-          cp summary.md stats/Global/Daily/README.md
-          cp stats_metadata.json stats/Global/Daily/stats_metadata.json
+          base_dir=stats/Global/Daily
+          
+          cp *.csv $base_dir/stats.csv
+          cp *.png $base_dir/charts/
+          cp summary.md $base_dir/README.md
+          cp stats_metadata.json $base_dir/stats_metadata.json
 
-          git add -f stats/Global/Daily/daily_global_stats.csv
-          git add -f stats/Global/Daily/stats_metadata.json
-          git add -f stats/Global/Daily/charts/top_users.png
-          git add -f stats/Global/Daily/README.md
+          git add -f $base_dir/stats.csv
+          git add -f $base_dir/stats_metadata.json
+          git add -f $base_dir/charts/
+          git add -f $base_dir/README.md
 
           
           git commit -m "Updated Daily global stats"
@@ -60,11 +62,14 @@ jobs:
           ACCESS_TOKEN_SECRET: ${{ secrets.ACCESS_TOKEN_SECRET }}
           BEARER_TOKEN: ${{ secrets.BEARER_TOKEN }}
         run: |
+          base_dir=stats/Global/Daily
+
           commit_id=$(git rev-parse --short HEAD)
           python tweet.py --tweet_last_day --tweet_global --git $commit_id
-          mv summary.md stats/Global/Daily/README.md
-          mv *.png stats/Global/Daily/charts/
-          git add -f stats/Global/Daily/README.md
-          git add -f stats/Global/Daily/charts/
+          
+          sudo mv summary.md $base_dir/README.md
+          
+          git add -f $base_dir/README.md
+
           git commit -m "Updated Readme Daily Global"
           git push
