--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -39,7 +39,8 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           base_dir=stats/Global/Daily
-          
+
+          mv summary.csv $base_dir/
           cp *.csv $base_dir/stats.csv
           cp *.png $base_dir/charts/
           cp summary.md $base_dir/README.md
