--- a/.github/workflows/monthly_nepal.yml
+++ b/.github/workflows/monthly_nepal.yml
@@ -47,6 +47,7 @@ jobs:
           base_dir=stats/Nepal/Monthly
           mkdir -p $base_dir/charts/
 
+          mv summary.csv $base_dir/
           cp *.csv $base_dir/stats.csv
           cp *.png $base_dir/charts/
           cp summary.md $base_dir/README.md
