added option for editors and removed auto meta opiton

--- a/.github/workflows/daily_global.yml
+++ b/.github/workflows/daily_global.yml
@@ -30,7 +30,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts --include_date_in_name
+          osmsg  --url "https://planet.openstreetmap.org/replication/day" --format csv image --last_day --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --read_from_metadata stats/Global/Daily/stats_metadata.json --changeset --summary --charts --include_date_in_name --meta
 
       - name: add stats to git
 
