--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -1,5 +1,4 @@
-name: Run Daily Report Tyrkeyeqp
-Hashtag
+name: Run Daily Report Tyrkeyeq Hashtag
 on:
   schedule:
     - cron: "0 4 * * *" # Run every day at 4 UTC
