--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Tyrkeyeq Hashtag
 on:
   schedule:
     - cron: "0 4 * * *" # Run every day at 4 UTC
-  push:
-    branches:
-      - master
+  # push:
+  #   branches:
+  #     - master
       
 jobs:
   issue:
