--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -1,10 +1,10 @@
 name: Run Daily Report smforst Hashtag
 on:
   schedule:
-    - cron: "0 5 * * *" # Run every day at 5 UTC
-  # push:
-  #   branches:
-  #     - master
+    - cron: "0 4 * * *" # Run every day at 4 UTC
+  push:
+    branches:
+      - master
 jobs:
   issue:
     runs-on: ubuntu-latest
