--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Tyrkeyeq Hashtag
 on:
   schedule:
     - cron: "0 4 * * *" # Run every day at 4 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
       
 jobs:
   issue:
@@ -40,17 +40,15 @@ jobs:
           git config --global user.email "skshitizraj@gmail.com"
           git config --global user.name "kshitijrajsharma"
           base_dir=stats/turkeyeq/Daily
+
           mkdir -p $base_dir/charts/
           
-          cp *.csv $base_dir/stats.csv
+          cp *.csv $base_dir/
           cp *.png $base_dir/charts/
           mv summary.md $base_dir/Readme.md
           cp stats_metadata.json $base_dir/stats_metadata.json
 
-          git add -f $base_dir/stats.csv
-          git add -f $base_dir/stats_metadata.json
-          git add -f $base_dir/charts/
-          git add -f $base_dir/Readme.md
+          git add -f $base_dir/*
 
 
           git commit -m "Updated Daily smforst stats"
