--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -2,9 +2,9 @@ name: Run Daily Report Tyrkeyeq Hashtag
 on:
   schedule:
     - cron: "0 4 * * *" # Run every day at 4 UTC
-  # push:
-  #   branches:
-  #     - master
+  push:
+    branches:
+      - master
       
 jobs:
   issue:
@@ -31,7 +31,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --meta --update --name stats/turkeyeq/Daily/stats
+          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats
 
       - name: add stats to git
 
