--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -30,7 +30,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags smforst --charts --summary --length highway --update --name stats/smforst/Daily/stats
+          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags smforst --charts --summary --length highway --update --name stats/smforst/Daily/stats --force
 
       - name: add stats to git
 
