disable auto run update workflow

--- a/.github/workflows/daily_smforst.yml
+++ b/.github/workflows/daily_smforst.yml
@@ -42,7 +42,7 @@ jobs:
 
           mkdir -p $base_dir/charts/
 
-          cp $base_dir/*.png $base_dir/charts/
+          mv $base_dir/*.png $base_dir/charts/
           mv $base_dir/stats_summary.md $base_dir/Readme.md
 
           git add -f $base_dir/*
