--- a/.github/workflows/daily_turkey_eq.yml
+++ b/.github/workflows/daily_turkey_eq.yml
@@ -31,7 +31,7 @@ jobs:
           OSM_USERNAME: ${{ secrets.OSM_USERNAME }}
           OSM_PASSWORD: ${{ secrets.OSM_PASSWORD }}
         run: |
-          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats --force
+          osmsg  --country turkey syria --format csv image --tags 'building' 'highway' 'waterway' 'amenity' --name stats/turkeyeq/Daily/stats --all_tags --hashtags TürkiyeEQ060223 --charts --summary --length highway --update --name stats/turkeyeq/Daily/stats --force
 
       - name: add stats to git
 
@@ -41,13 +41,15 @@ jobs:
           git config --global user.name "kshitijrajsharma"
           base_dir=stats/turkeyeq/Daily
 
-          mkdir -p $base_dir/charts/
+          mkdir -p $base_dir
 
-          mv $base_dir/*.png $base_dir/charts/
           mv $base_dir/stats_summary.md $base_dir/Readme.md
 
           git add -f $base_dir/*
 
-
           git commit -m "Updated Daily turkeyeq stats"
           git push
+
+      - name : Tweet stats
+        run : |
+          python tweet_test.py --tweet '#TürkiyeEQ060223' --name stats/turkeyeq/Daily/stats
